fix: incorrect z-index for search button

--- a/src/theme.scss
+++ b/src/theme.scss
@@ -1100,50 +1100,78 @@ main#stream #stream-footer,
 
 }  
 
-nav.nav_menu #nav_menu_toggle_aside {
-  @media (max-width: 840px) {
-    margin: 0;
+nav.nav_menu {
+  #dropdown-search-wrapper.only-mobile {
+    /* Mobile: Container for search button, place it on the top header, left to settings. */
+    position: fixed;
+    top: 5px;
+    z-index: 50;
+    right: 60px;
+    
+    #toggle-search {
+      /* Mobile: Search button */
+      border-radius: 50%;
+      width: 40px;
+      height: 40px;
+      box-sizing: border-box;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      background-color: #26272a;
+
+      img {
+        filter: brightness(5);
+      }
+    }
   }
 
-  /* Button to show/hide sidenav */
-  & > button.btn {
-    position: fixed;
-    top: 12px;
-    left: 8px;
-    border-radius: 8px;
-    transition: background-color 0.3s;
-    z-index: 50;
-
+  #nav_menu_toggle_aside {
     @media (max-width: 840px) {
-      top: 3px;
-      background: transparent;
+      /* Mobile: Container for sidenav toggle button. */
+      margin: 0;
     }
-
-    &:before {
-      content: "";
-      width: 16px;
-      height: 14px;
-      background-image: url("../themes/Mapco/icons/view-normal.svg");
-      background-size: contain;
-      display: inline-block;
-      filter: brightness(3);
-    }
-
-    .icon {
-      /* Hide existing sidenav toggle icon */
-      display: none;
-    }
-
-    &.active {
-      background: transparent;
-      background-color: transparent;
-    }
-
-    &:hover {
-      background-color: #57575a;
+  
+    /* Button to show/hide sidenav. */
+    & > button.btn {
+      position: fixed;
+      top: 12px;
+      left: 8px;
+      border-radius: 8px;
+      transition: background-color 0.3s;
+      z-index: 50;
+  
+      @media (max-width: 840px) {
+        top: 3px;
+        background: transparent;
+      }
+  
+      &:before {
+        content: "";
+        width: 16px;
+        height: 14px;
+        background-image: url("../themes/Mapco/icons/view-normal.svg");
+        background-size: contain;
+        display: inline-block;
+        filter: brightness(3);
+      }
+  
+      .icon {
+        /* Hide existing sidenav toggle icon */
+        display: none;
+      }
+  
+      &.active {
+        background: transparent;
+        background-color: transparent;
+      }
+  
+      &:hover {
+        background-color: #57575a;
+      }
     }
   }
 }
+
 
 
 
